La til jib fix for nye chainguard images